Cleaned up map interface, fixed z-index interference bug, container for future request form.

--- a/htdocs/css/index.css
+++ b/htdocs/css/index.css
@@ -1,19 +1,59 @@
+/* Map */
 .card {
-  margin: 0;
+  height: calc(100% - 62px);
+  margin: 2px 0 0;
 }
 
 .card .card-content {
-  padding: 16px;
+  padding: 14px;
 }
 
 .card .card-content .card-title {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
+.card .card-title.activator {
+  cursor: default;
+}
+
+.card .card-content .card-title i {
+  line-height: normal;
+  margin-bottom: 2px;
+  vertical-align: text-bottom;
+}
+
+.card .card-reveal {
+  padding: 0;
+}
+
+.card .card-reveal .card-title {
+  cursor: default;
+  padding: 12px 0;
+}
+
+.card .card-reveal .card-title i {
+  line-height: normal;
+  margin-bottom: 2px;
+  vertical-align: text-bottom;
+}
+
+.container {
+  padding-left: calc(100vw - 100%);
+}
+
+/* Code for start and end search boxes
+<div class="container" style="position: relative;">
+  <div id="floating-panel"></div>
+</div>
+*/
 
 #floating-panel {
   position: absolute;
   width: 100%;
-  z-index: 5;
-  background-color: blue;
+  z-index: 1;
+}
+
+#map {
+  height: calc(100% - 62px);
+  width: 100%;
 }
